--- a/파이썬_머신러닝_완벽_가이드_pg_1~38.ipynb
+++ b/파이썬_머신러닝_완벽_가이드_pg_1~38.ipynb
@@ -11,6 +11,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 넘파이(Numpy)\n",
+        "\n",
+        "\n",
+        "*   Numerical Python의 약자, 선형대수 기반의 프로그램을 쉽게 만들 수 있도록 지원함\n",
+        "*   배열 기반의 연산을 물론이고 다양한 데이터 핸들링 기능을 제공함"
+      ],
+      "metadata": {
+        "id": "b5BFOFlkXUBz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np"
@@ -20,6 +33,18 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 넘파이 모듈 임포드\n",
+        "- 넘파이 기반 데이터 타입 : ndarray -> 다차원 배열을 쉽게 생성하고 다양한 연산 수행 가능\n",
+        "- np.array() :  ndarray로 변환\n",
+        "- ndarray.shape() : ndarray 배열의 차원과 크기를 튜플 형태로 나타내줌"
+      ],
+      "metadata": {
+        "id": "Nl3LZfrUX7HV"
+      }
     },
     {
       "cell_type": "code",
@@ -61,6 +86,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- array1 array 형태: (3,) -> 1차원 array, 3개의 데이터를 가지고 있음\n",
+        "- array2 array 형태: (2, 3) -> 2차원 array, 2개의 row & 3개의 column으로 구성되어 6개의 데이터를 가지고 있음\n",
+        "- array3 array 형태: (1, 3) -> 2차원이며, 1개의 row와 3개의 column으로 구성됨"
+      ],
+      "metadata": {
+        "id": "dGigOPsRYx1f"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print('array1: {0}차원, array2: {1}차원, array3: {2}차원'.format(array1.ndim,array2.ndim,array3.ndim))"
@@ -82,6 +118,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 리스트 []는 1차원, 리스트의 리스트인 [[ ]]는 2차원!"
+      ],
+      "metadata": {
+        "id": "_-_0M0SIZXf7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ndarray의 데이터 타입\n",
+        "\n",
+        "\n",
+        "*   숫자, 문자역, 불 값 모두 가능\n",
+        "*   숫자 -> int형, unsigned int형, float형, complex 타임(더 큰 숫자 값이나 정밀도)\n",
+        "- 같은 데이터 타입끼리만 연산 가능\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qtIDxh4PZs1x"
+      }
     },
     {
       "cell_type": "code",
@@ -143,6 +203,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- int형 값과 문자열이 섞여 있는 list2를 ndarray로 변환한 array2는 숫자 1,2가 모두 문자 1,2로 변환됨\n",
+        "- 모두 같은 데이터 타입이어야 하므로 다른 데이터 타입이 섞여 있을 경우 더 큰 데이터 타입으로 변환되기에 int형이 유니코드 문자열 값으로 변환\n",
+        "- list3의 경우 int형과 float형이 섞여 있는데, int인 1,2가 float64형으로 바뀜"
+      ],
+      "metadata": {
+        "id": "H7okSUnjaGtQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- astype() : ndarray 내의 데이터값의 타입 변경\n",
+        "- astype()에 인자로 원하는 타입을 문자열로 지정\n",
+        "- 이렇게 하는 이유는, 메모리 절감이 가능하기 때문임"
+      ],
+      "metadata": {
+        "id": "DwN7RIljaud-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "array_int=np.array([1,2,3])\n",
@@ -177,6 +259,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- int32형 데이터를 float64로 변환하고, 다시 float64를 int32로 변경"
+      ],
+      "metadata": {
+        "id": "HaWJoyTXbEWM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ndarray를 편리하게 생성하기 - arange, zeros, ones\n",
+        "\n",
+        "\n",
+        "*   주로 테스트용으로 데이터를 만들거나 대규모의 데이터를 일괄적으로 초기화해야 할 경우에 사용\n",
+        "*  arange() : array를 range()로 표현, 0부터 함수 인자 값-1까지의 값을 순차적으로 ndarray의 데이터값으로 변환\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0-WYIaIdbMlH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "sequence_array=np.arange(10)\n",
@@ -201,6 +306,25 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- sequence_array : 0부터 (10-1 = )9까지의 연속 숫자 값으로 구성된 1차원 array"
+      ],
+      "metadata": {
+        "id": "eCmGuqq5bpOJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- zeros() : 튜플 형태의 shape 값을 입력하면 모든 값을 0으로 채운 해당 shape를 가진 ndarray로 반환\n",
+        "- ones() : 튜플 형태의 shape 값을 입력하면 모든 값을 1로 채운 해당 shape를 가진 ndarray로 반환, dtype을 정해주지 않으면 default로 float64 형의 데이터로 ndarray를 채움"
+      ],
+      "metadata": {
+        "id": "vLQ3g7l3cH34"
+      }
     },
     {
       "cell_type": "code",
@@ -237,6 +361,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ndarray의 차원과 크기를 변경하는 reshape()\n",
+        "\n",
+        "\n",
+        "*   reshape() : ndarray를 특정 차언 및 크기로 변환\n"
+      ],
+      "metadata": {
+        "id": "XQOwBT4AciJB"
+      }
     },
     {
       "cell_type": "code",
@@ -277,6 +413,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 0~9까지의 1차원 ndarray를 2 row x 5 col과 5 row x 2 col 형태로 2차원 ndarray로 변환"
+      ],
+      "metadata": {
+        "id": "e7IYzgN9ct0l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- (10,) 데이터를 (4,3) shape 형태로 변경할 수 없기에 오류 발생"
+      ],
+      "metadata": {
+        "id": "11Z_O_jnc9HN"
+      }
     },
     {
       "cell_type": "code",
@@ -337,6 +491,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- array2=array1.reshape(-1,5) -> row인자가 -1, col인자가 5\n",
+        "- 10개의 1차원 데이터와 호환될 수 있는 고정된 5개 col에 맞는 row 개수는 2개이므로, 2 x 5의 2차원 ndarray로 변환\n",
+        "- array3=array1.reshape(5,-1) -> 10개의 1차원 데이터와 호환될 수 있는 고정된 5개의 row에 맞는 col은 2이므로 5 x 2의 2차원 ndarray로 변환"
+      ],
+      "metadata": {
+        "id": "fxOnB9I7dLIR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "array1=np.arange(10)\n",
@@ -364,6 +529,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 하지만, 10개의 1차원 데이터롤 고정된 4개의 col을 가진 row로는 변경할 수 없기에 오류뜸"
+      ],
+      "metadata": {
+        "id": "3l7wPSr4d30j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- reshape(-1,1) : 2차원, 여러 개의 row을 가지되 반드시 1개의 col을 가진 ndarray로 변환됨을 보장"
+      ],
+      "metadata": {
+        "id": "3HnH6ZPBeETz"
+      }
     },
     {
       "cell_type": "code",
@@ -408,6 +591,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- reshape(-1,1)을 이용해 3차원을 2차원으로, 1차원을 2차원으로 변경\n",
+        "- ndarray는 tolist()를 이용해리스트 자료형으로 변환"
+      ],
+      "metadata": {
+        "id": "BD4VSFe4eSXH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 넘파이의 ndarray의 데이터 세트 선택하기 - 인덱싱(Indexing)\n",
+        "\n",
+        "\n",
+        "*   특정 데이터만 추출\n",
+        "*   슬라이싱 : 연속된 인덱스상의 ndarray를 추출\n",
+        "- 팬시 인덱싱 : 일정한 인덱싱 집합을 list나 ndarray 형태로 지정해 해당 위치에 있는 데이터의 ndarray로 반환\n",
+        "- 불린 인덱싱 : True/False 인덱싱 집합을 기반으로 True에 해당하ㅡㄴ 인덱스 위치에 있는 데이터의 ndarray를 반환\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "lBr2MfLCeh9p"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#1부터 9까지의 1차원 ndarray 생성\n",
@@ -438,6 +647,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- array1[2] : 3번째 인덱스 위치의 데이터 값 = 3"
+      ],
+      "metadata": {
+        "id": "9eYHGLR7fMhZ"
+      }
     },
     {
       "cell_type": "code",
@@ -524,6 +742,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- 앞 예제의 1차원 ndarray를 2차원의 3x3 ndarray로 변환 후, [row, col]을 이용해 2차원 ndarray에서 데이터 추출\n",
+        "- array2d[0,0] : 첫 번째 row, 첫 번째 col 위치의 데이터인 1\n",
+        "- array2d[0,1] : 첫 번째 row, 두 번째 col 위치의 데이터인 2\n",
+        "- array2d[2,2] : 세 번째 row, 세 번째 col 위치의 데이터인 9\n",
+        "- axis 0 : row 방향의 축, axis 1 : col 방향의 축"
+      ],
+      "metadata": {
+        "id": "ys4bbHdAfae0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "array1=np.arange(start=1,stop=10)\n",
@@ -549,6 +780,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 시작:종료 -> 시작 인덱스에서 종료 인덱스-1 위치에 있는 데이터의 ndarray를 반환"
+      ],
+      "metadata": {
+        "id": "CX11r3lNgM3d"
+      }
     },
     {
       "cell_type": "code",
@@ -699,6 +939,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- array2d[ [0, 1] ,2] : row 축에 팬시 인덱싱인 [0, 1]을, col 축에는 단일 값 인덱싱 2를 적용 -> (0,2), (1,2)로 적용돼 [3, 6]을 반환\n",
+        "- array2d[ [0, 1], 0 : 2] : ((0, 0),(0, 1)),((1, 0),(1, 1)) 인덱싱이 적용돼 [[1, 2], [4, 5]]를 반환"
+      ],
+      "metadata": {
+        "id": "5dLbcKl-hkZn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "array1d=np.arange(start=1,stop=10)\n",
@@ -725,6 +975,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- [1, 2, 3, 4, 5, 6, 7, 8, 9]에서 데이터 값이 5보다 큰 데이터만 추출"
+      ],
+      "metadata": {
+        "id": "Lg7kEH1oiUtV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "array1d>5"
@@ -749,6 +1008,15 @@
           "execution_count": 33
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 5보다 큰 데이터가 있는 위치는 True 값이, 그렇지 않은 부분은 False 값이 반환"
+      ],
+      "metadata": {
+        "id": "PrGk6BmmiddM"
+      }
     },
     {
       "cell_type": "code",
@@ -801,6 +1069,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "step1 : array1d > 5와 같이 ndarray의 필터링조건을 []안데 기재\n",
+        "step2 : False값은 무시하고 True값에 해당하는 인덱스값만 저장\n",
+        "step3 : 저장된 인덱스 데이터 세트로 ndarray 조회"
+      ],
+      "metadata": {
+        "id": "hf09sToQiuY8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 행렬의 정렬 - sort()와 argsort()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "w3NqZumZi_oO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- np.sort() : 원 행렬은 그대로 유지한 채 원 행렬의 정렬된 행렬 반환\n",
+        "- ndarray.sort() : 원 행렬 자체를 정렬한 형태로 변환, 변환값은 None"
+      ],
+      "metadata": {
+        "id": "be1GJNzIjIng"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "org_array=([3,1,9,5])\n",
@@ -835,6 +1134,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 원본 행렬 [ 3 1 9 5 ] 에 대해서 np.sort()는 원본 행렬을 변경하지 않고 정렬된 형태로 반환했으며, ndarray.sort()는 원본 행렬 자체를 정렬한 값으로 변환함"
+      ],
+      "metadata": {
+        "id": "bcYdlzhwjjvR"
+      }
     },
     {
       "cell_type": "code",
@@ -894,6 +1202,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- 워본 행렬이 정렬되었을 때 기존 원본 행렬의 원소에 대한 인덱스를 필요로 할 때 np.argsort()를 이용\n",
+        "- np.argsort()는 정렬 행렬의 원본 행렬 인덱스를 ndarray형으로 반환"
+      ],
+      "metadata": {
+        "id": "1Sw0oILtj8aY"
+      }
     },
     {
       "cell_type": "code",
@@ -979,6 +1297,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- John = 78, Mike = 95, Sarah = 84, Kate = 98, Samuel = 88을 ndarray로 활용하고자 함\n",
+        "- 시험 성적 순으로 학생 이름을 출력하고자 한다면 np.argsort(score_array)를 이용해 반환된 인덱스를 name_array에 팬시 인덱스를 적용해 추출"
+      ],
+      "metadata": {
+        "id": "VdDuoTt9kSpN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 선형대수 연산 = 행렬 내적과 전치 행렬 구하기\n",
+        "\n",
+        "행렬 내적(행렬 곱)\n",
+        "- 두 행렬 A와 B의 내적은 np.dot()을 이용해 계산"
+      ],
+      "metadata": {
+        "id": "iaGcsV2Tk1JU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "A=np.array([[1,2,3],\n",
@@ -1009,6 +1349,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "전치 행렬\n",
+        "- 원 행렬에서 행과 열 위치를 교환한 원소로 구성한 행렬\n",
+        "- transpose()를 이용해 구할 수 있음"
+      ],
+      "metadata": {
+        "id": "2lEAMgN1lDl5"
+      }
     },
     {
       "cell_type": "code",
