Colab을 통해 생성됨

--- a/고객_대출등급_분류_AI_해커톤.ipynb
+++ b/고객_대출등급_분류_AI_해커톤.ipynb
@@ -351,6 +351,18 @@
       "source": [
         "sub.to_csv('final_submission.csv', index = False)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<배울 점>\n",
+        "- Optuna 라이브러리 이용한 점\n",
+        "- 두 변수의 결합('총상환원금'/'총상환이자')으로 파생변수를 생성했다는 점"
+      ],
+      "metadata": {
+        "id": "itcqilWYvJme"
+      },
+      "id": "itcqilWYvJme"
     }
   ],
   "metadata": {
